--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Ignore contents of installed app folders
+code_tunnel/*
+Fiji.app/*
+globusconnectpersonal/*
+
+# Ignore logs, runs, samples and credentials (per-user things, or should not be checked in)
+log/*
+runs/*
+samples/*
+credentials/*
